--- a/Low_freq_otg_app/app/src/main/res/layout/main.xml
+++ b/Low_freq_otg_app/app/src/main/res/layout/main.xml
@@ -219,5 +219,23 @@
                 android:text="－" />
         </LinearLayout>
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_margin="3dip"
+        android:layout_weight="1"
+        android:background="#202020"
+        android:tag="Write block" >
+        <Button
+            android:id="@+id/start_btn"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:textSize="30dp"
+            android:background="@drawable/button_pattern"
+            android:gravity="center"
+            android:scaleType="centerInside"
+            android:text="開始" />
+    </LinearLayout>
 </LinearLayout>
